appendices altered, worked into conclusion

--- a/chap1.tex
+++ b/chap1.tex
@@ -45,7 +45,8 @@
 %%we have gotten somewhere and learned something
 
 %%=====================================
-%%Personal exceptionalism: ``we think we're good drivers''
+
+%%TODO: Personal exceptionalism: ``we think we're good drivers''
 
 
 The popular narratives about self-driving vehicles have not appeared
@@ -508,16 +509,24 @@ might.\footnote{It is worth mentioning here that the ``lean
   \emph{kaizen} manufacturing is increased trust between management
   and labor, assisted by continual communications and high job
   security.\cite[p. 198--199]{nyeAmericas} These na\"{\i}vely seem
-  directly opposed to automation.} There is some truth to this, though the actual story
+  directly opposed to automation.} There is some truth to this, though
+the actual story 
 is far more complicated and has less to do with automation and more to
 do with product priorities and other labor
 relations.\cite[p. 188--200]{nyeAmericas} The actual historical
-circumstances are, in this case, less important than the general perception that automated
+circumstances are, in this case, less important than the general
+perception that automated 
 systems, such as the robotic arms used for painting and assembly, are
 reducing the overall pool of available jobs.
 
+%%TODO: Article about expected impacts in UK, includes lots of jobs and
+%%predictions by 2030:
+%%http://www.telegraph.co.uk/finance/newsbysector/industry/engineering/11495706/Driverless-cars-to-create-320000-UK-jobs-and-save-2500-lives.html
+%footnote it
+
 Modern automotive manufacturing is not alone in presenting conflicting ideas
-of what automation can do. Arsenal practice was the site of multiple revolutions in U.S.
+of what automation can do. Arsenal practice was the site of multiple
+revolutions in U.S. 
 manufacturing technology through the 1800s and early 1900s, notably
 the development of the so-called ``American system'' of interchangeable
 parts, through which a gradual increase in mechanization would seem to
@@ -1692,10 +1701,6 @@ assumptions matter? And what
 reasons might we have for investigating alternatives?
 
 %%CONCLUDE
-
-%%TODO: turn section 1 into ``science fictions, design fictions''
-%%read actual research papers and meld in their components
-%%merge back in material from chap3
 
 
 %% 3) (or worked in to each of the previous) current research
