--- a/chap2.tex
+++ b/chap2.tex
@@ -27,7 +27,7 @@
 %% the roads for car lovers . . . doesn't make sense (chap3 handles it)
 
 
-%EDITS
+%TODO: EDITS
 %Starr \& Bowker, standards? resonant??
 
 We find ourselves in an era of seemingly continual technological
@@ -356,7 +356,7 @@ the environment, but building a robot that exhibits complex and
 predictable behaviors in complex environments, through this approach,
 is exceedingly difficult, as evidenced by Brooks's shift to hybrid
 modeling approaches. But new AI techniques do allow researchers to
-take advantage of new kinds of data \cite{???}. Today, localization and
+take advantage of new kinds of data. Today, localization and
 mapping are both considered ``satisfactorily solved in practical
 situations''---though SLAM techniques
 are still somewhat less reliable or developed---given sufficient
@@ -697,7 +697,7 @@ artifact of interest. Because the visual detection technologies used
 by autonomous vehicles are compatible with the visual technologies of
 media representation, new types of seeing are opened to us.
 
-%%TODO Kelly Joyce on fMRI: Magnetic Appeal: MRI and the Myth of Transparency
+%%Kelly Joyce on fMRI: Magnetic Appeal: MRI and the Myth of Transparency
 A coincidence of sensing and representation in the evocative and
 powerfully persuasive medium of visual representation stands to shift
 the way we perceive driverless systems in their operation, providing
@@ -1044,6 +1044,8 @@ laws---and enact an ethics impervious to scrutiny.\footnote{Digital
 %%on designs??
 
 %%TODO ``competent'' below, TL writes ``?''
+%%TODO: here is the point of ``personal exceptionalism'' I think; fits
+%%with this feeling of competence
 The primary driving force in the current self-driving car
 narrative is safety; specifically, the poor safety record of human
 drivers and the potential for machines to do much better, free from
@@ -1205,6 +1207,11 @@ consequences'' \cite[p. 2]{DSB}. They warn of \emph{brittle}
 platforms, and emphasize the importance of developing ways to predict
 and understand the resilience of systems\cite[p. 7, 11]{DSB}
 
+%%TODO: Amount of code required comparatively with cars and planes, guy says
+%%fully automated is possible but for ethical considerations:
+%%http://mobile.reuters.com/article/idUSKBN0MN1E820150327?irpc=932
+%%And mention further problems with nondeterministic systems!
+
 %Include NITRD report, if available? http://scenic.princeton.edu/NITRD-Workshop/index.html 
 
 However, when it comes to public adoption of automated technology,
@@ -1311,7 +1318,6 @@ vehicles have a high probability of effecting a positive change on the
 cityscape, as some proponents claim, they could be an important
 addition to these developments.
 
-%%TODO input an X below
 Congestion and other environmental factors, such as air pollution, are
 other social reasons used to support automated vehicle development.
 With carefully controlled, automated driving, the fuel consumption of each
