--- a/chap3.tex
+++ b/chap3.tex
@@ -23,11 +23,7 @@
 %--interface first approach of Google, w/ similicity, presupposes a
 %certain kind of operation
 
-%% Does HSC section come before the history??
-
-%%Subheads for domains
-
-%%p 110: high performance racing pushing things? put in a little bit
+%%TODO: p 110: high performance racing pushing things? put in a little bit
 %%about F1 etc in the conclusion
 
 
@@ -1162,19 +1158,20 @@ terms of autonomy and ethics. Furthermore, as I have stated
 repeatedly, complete autonomy is fundamentally a chimera.
 
 %%TODO add this paragraph
-http://recode.net/2015/03/17/google-self-driving-car-chief-wants-tech-on-the-market-within-five-years/
-``Urmson said Google believes that while technology that assists drivers
-can help reduce some accidents, only completely self-driving cars will
-fully address safety concerns. One reason, he said, is that the better
-the assistive technology gets, the more risks human drivers will
-take.''
-``Nor, he said, will today's driver-assist technologies just evolve to
-become fully self-driving cars on their own.
+%% http://recode.net/2015/03/17/google-self-driving-car-chief-wants-tech-on-the-market-within-five-years/
+%% ``Urmson said Google believes that while technology that assists drivers
+%% can help reduce some accidents, only completely self-driving cars will
+%% fully address safety concerns. One reason, he said, is that the better
+%% the assistive technology gets, the more risks human drivers will
+%% take.''
+%% ``Nor, he said, will today's driver-assist technologies just evolve to
+%% become fully self-driving cars on their own.
 
-`That’s like me saying if I work really hard at jumping, one day I
-will be able to fly,' he said.''
---> he is right that driver assistance tech won't just become
-driverless, but wrongly assumes driverless is the only reasonable end goal.
+%% `That’s like me saying if I work really hard at jumping, one day I
+%% will be able to fly,' he said.''
+%% --> he is right that driver assistance tech won't just become
+%% driverless, but wrongly assumes driverless is the only reasonable end goal.
+
 
 %% 3) situate the moonshot approach (which may actually be easier in some
 %% senses but less socially acceptable) and the mixed approach in a way
