--- a/chap4.tex
+++ b/chap4.tex
@@ -1,6 +1,15 @@
 \chapter{Cyborgs and Chauffeurs}
 \label{app:a}
 
+%%TODO: appendices didn't seem to fit separately, they felt like MOST
+%%of the material belongs in the 
+%Lovely thoughts, but too robust to be tossed out at the end; work it
+%in or save them for later
+%%perhaps work it into the CONCLUSION?
+
+%--B belongs in Conclusion; A belongs in some footnotes
+
+
 %% Somewhere in here:
 %% bring in the qualitative observations of actually driving, the
 %% components we interact with on a daily basis
