--- a/concl.tex
+++ b/concl.tex
@@ -14,12 +14,387 @@ movement from human systems, through hybrid systems, to fully
 autonomous systems autonomous is not inevitable. It is not a
 requirement of technological progress, or a fundamental fact about the
 future, but one narrative among many which must be conditional on our
-acceptance as well as on technological progress. A forward march of
+acceptance as well as on technological, and in many cases
+infrastructural, progress. A forward march of
 technology does not alone make full autonomy acceptable or viable,
 but presents a convenient cover story for the economic objectives of
-organizations involved in automating the car.\footnote{For more about
-  how struggles about cities and transportation technologies have
-  panned out in the past, see appendix \ref{app:b}.}
+organizations involved in automating the car.
+
+\section{Reshaping the Road: A Last Lesson in History}
+
+So far, I have treated the current status
+quo as a foregone conclusion: that cars would have separate spaces on
+the roadway, and generally interact with pedestrians in a controlled
+fashion.\footnote{This is not, however, to minimize the human
+  interaction component between drivers and pedestrians at crosswalks
+  and lights. Such interactions are a critical part of navigating city
+  streets, and some interesting research work has been done building
+  machines that take them seriously. Of particular note is Nicholas
+  Pennycooke's thesis on AEVITA\cite{???-aevita}. Negotiating street
+  space with unpredictable and difficult-to-read human beings is a
+  major stumbling block for automated vehicles.} However, there was a
+time when city streets were not primarily the venue of the automobile,
+but were mixed-use areas where children played, vendors sold goods,
+and adults walked, talked, biked, and gathered socially. The street as
+a social space predates the concept of the street as a throughway for
+motorized transportation specifically, and its changes over the past
+hundred or so years are greatly responsible for the inhumanity of the
+modern urban landscape, an inhumanity that current urban designers are
+interested in reversing. 
+
+Early automobiles and streetcars shared the roads with other social
+uses. And this space sharing caused problems for the drivers and
+manufacturers of fast moving, dangerous vehicles, which all too
+frequently inflicted bodily harm on those people with which they
+shared the environment. The regimentation of public space into
+crosswalks, where pedestrians are legally protected, and other parts
+of the roadway from which pedestrians are supposed to be excluded, is
+a direct outcome of an early 20th century campaign to reduce
+pedestrian deaths. ``In the early days of the automobile, it was
+drivers' job to avoid you, not your job to avoid them,'' describes
+Peter Norton, the author of \emph{Fighting Traffic}
+\cite{???-http://www.vox.com/2015/1/15/7551873/jaywalking-history}.
+But accidents nevertheless occurred, and the victims were primarily
+children and the elderly\cite{???-vox}; and the deaths of children,
+specifically, came to have a new social meaning that made them
+particularly abhorrent\cite{???-zelizer}/ 
+After Mary Miner's death in 1903, the driver was almost beaten by a
+mob\cite[p. 22]{???-zelizer}. Accidental deaths of children were an
+alarming problem, with a significant public response:  mobs attacked
+the killers, acts of public mourning memorialized the lost, and a
+national safety campaign began to attempt to reduce these
+deaths\cite[p. 23]{???-zelizer}. Public outrage cast automobiles as
+``frivolous playthings'' or ``pleasure cars''\cite{???-vox}, magnified
+by a transformation in the sentimental worth of
+children\cite[p. 23]{???-zelizer}. 
+
+This contest for public space involved a potentially radical change in
+the uses and meanings of the street. As Zelizer notes, the city street
+was formerly a playground for children, in part out of the necessity
+to find some space for play amid crowded tenements\cite[p.
+  33]{???-zelizer}. But children did not surrender their street games
+easily, and their ``eviction'' from the streets came about via safety
+campaigns and ``Americanization programs''---which encouraged
+immigrant children to use playgrounds, instead of streets, as their
+play spaces---catalyzed by the automotive threat\cite[p.
+  35]{???-zelizer}. But the deaths of children at the hands of
+automobiles were not solely placed on the shoulders of drivers. As the
+death rate became a national crisis, the
+early press ``pinned most of the blame on parents'': modern life, it
+was said, ``cannot be retarded to enable heedless children to get out
+of the way'' \cite[p. 37]{???-zelizer}. Street games were turned into
+criminal offenses by around 1914, and the police arrested many
+children, but fatalities kept increasing nonetheless\cite[p.
+  38]{???-zelizer}. Families were called upon to take a greater role
+in protecting children from the perils of the street; mothers were
+charged with keeping their children out of ``what had been their play
+areas'' in order to keep the roads clear for automobiles, and safety
+crusaders tended to blame mothers for the deaths of their own
+children\cite[p. 13]{???-lochlannjain}. The homogenization of the road
+for ``transit'' \cite[p. 13]{???_lochlannjain} involved not only
+family pressures but a concerted legal and public relations campaign. Automakers
+and dealers, concerned by public pressure for speed governors on
+automobiles, pushed for stricter pedestrian controls across the country, and
+auto industry groups exerted significant pressure on the creation of
+the 1928 Model Municipal Traffic Ordinance in order to build a law
+that was friendly to automobiles\cite{???-vox}. To attempt to
+compensate for laws that were rarely followed and enforced,
+auto-friendly groups worked to change the public dialogue. Articles
+ghostwritten by the National Automobile Chamber of Commerce shifted
+the blame for traffic accidents to pedestrians; the AAA sponsored
+safety campaigns in schools; and police and citizens were called upon
+to shame transgressors in order to set new public standards---even the
+name for the infraction, ``jay-walking,'' was intended to create
+public opprobrium for the supposed ``hicks'' who did not know how to
+behave in cities, and to shift blame to them \cite{???-vox}. This
+change in the way streets were utilized entailed a large societal
+shift motivated by a new technology, but it would be wrong to say it
+was caused by the automobile. Instead, automobility was an enabling
+force, which provided auto companies and their supporters the impetus
+to shift public standards in a particular direction, and to shape the
+street to their own advantage.\footnote{Cars were not, however, the
+  only technological device responsible for 
+the beginning of the street as we know it.
+Automobiles were not fundamentally a prerequisite for the creation of the paved
+roads that later helped them flourish. Instead, the bicycle marks the
+beginning of the ``good roads'' movement, and the push for ubiquitous
+road
+paving\cite{???-http://www.vox.com/2015/3/19/8253035/roads-cyclists-cars-history}.
+Bicycles and the social groups that championed their use--aided by
+asphalt manufacturers and other special interests who saw money to be made---created the
+very roads that bicycles then had to compete with cars for space on
+\cite{???-vox2}. Many of the primary riders who had succeeded in lobbying for
+the 1916 Federal Aid Road Act, however, switched over to pioneer the
+automobile as its popularity rose in the early 20th century. Between
+the technologies of bicycle and automobile, the American roadway
+underwent a period of radical change that crystallized the system into
+something relatively close to its current form.} 
+
+This historical
+example provides some insight into the process by which new
+transportation technologies become entwined with new social standards
+and legal principles. Technological epistemologies are deeply involved
+in this process: What is a road for? What is a vehicle's
+proper role? We know that a road is intended for driving precisely
+because we have been taught according to a social code that was
+designed to foster automobility. What is the new epistemology needed
+to make sense of devices like 
+automated vehicles in their every-day existence? We are so far not
+used to encountering such devices
+except in weak forms such as cruise control and automated
+transmissions. How should we regard them?
+Automobiles were long subject to disputes over their nature: were they
+fundamentally safe vehicles misused by people, or fundamentally
+dangerous technologies that required careful licensing and use to
+make safe? In one such battle over cars as ``dangerous
+instrumentalities,'' a court held that ``Until human agency intervenes, they are usually
+harmless''\cite[p. 10]{???-lochlannjain}. Such legal statements
+explicitly involve human agency, but machine agency presents the
+possibility that such claims could be obsolesced. Are our intuitions
+affected when and if automated vehicles can be said to ``operate
+themselves'' for some periods of time, nonwithstanding the centrality
+of human supervision to operations over the long term?
+And what new re-shapings of public space will happen as part of the 
+popularization of these technologies? Will these vehicles increase the
+segregation of the road space, and require new lanes that are even
+more insulated from pedestrians? Or will faster reaction times and
+always-attentive automated safety features foster tighter, mixed-use
+environments?\footnote{And additionally, as the concept of replacing traffic
+lights with a slots system, as described by Paolo Santi, should have
+us asking, which types and classes of users will the new environments
+and standards benefit? Will environments improve for those with access
+to technology, while being degraded for those without?}
+
+\section{New Epistemologies}
+
+How we ask and answer such questions depends on our understanding (or
+not) of our own hybridity with technology. This hybridity deserves
+to be more broadly appreciated within the public sphere. 
+In fact, I hold that fostering its appreciation is of paramount
+importance, one of the great challenges for the public understanding
+of technology in the near future. Without an understanding of our
+currently hybrid nature, we risk having to choose between blind ludditism
+and equally blind technophilia. We come to face questions of our own
+obsolescence, and are left with no way out because our way of thinking
+about the world no longer corresponds to the world we see and live in
+on a day-to-day basis. Either humans should drive, or machines should
+drive. The idea that humans drive through machines, or machines drive
+via humans, or that human and machine drive in combination, are
+practically incomprehensible. They seem like failures---and they are
+failures for an ideology of complete technological dominance---when
+indeed they may be the roots of our greatest successes. But once we
+recognize that we \emph{already} drive through machines, and that they
+even already may drive through us---consider blind-spot
+warning lights, which are an automated system designed to affect the
+human and produce a response, but have no individual capacity to drive
+the vehicle---multiple, multifaceted futures of automated vehicle
+development open to us. We are not building robotic
+chauffeurs, but rather designing ourselves, in some fashion, into more
+hybrid, more cyborg, entities.\footnote{To return to science fiction, Phillip K. Dick said in
+a 1972 speech: ``Someday a human being, named perhaps Fred White, may shoot a robot
+named Pete Something-or-Other, which has come out of a General
+Electrics factory, and to his surprise see it weep and bleed. And the
+dying robot may shoot back and, to its surprise, see a wisp of gray
+smoke arise from the electric pump that it supposed was Mr. White's
+beating heart. It would be rather a great moment of truth for both of
+them'' \cite{???-http://boingboing.net/2015/03/10/philip-k-dicks-androids-blu.html}.
+While ``Pete Something-or-Other'' does not yet exist, ``Fred White''
+is already here. Fully comprehending this is a critical task for the
+maintenance of cogent, productive public conversations---and
+policymaking---about automated vehicles.}
+
+%%TODO insert cyborg ref briefly
+%While they may permeate Hollywood movies, most people would probably
+%say that they are not yet here. 
+
+The cyborg is publicly understood as an artifact of science
+fiction. But I would argue that we are
+all cyborgs, to a greater or lesser extent, in our interactions with
+everyday technologies and devices---not only those people augmenting
+their bodies with implanted electrodes, or making use of prosthetics
+to replace lost limbs, but everyone who interacts with a computer,
+carries a cellular phone, or drives a car. This idea has received
+serious attention and consideration in philosophical circles, and
+deserves to be revisited here as we consider \emph{why} the hybridity
+of vehicle operation is not widely recognized, and what can be done to
+increase popular appreciation of this operation and the important
+questions it reveals about how we design the future. Our world is
+becoming a ``cyborg planet,'' to an extent many have not yet
+realized\cite[p. 64]{ekbia}.
+
+The idea of the ``cyborg'' was introduced by Manfred Clynes and Nathan
+Kline in 1960 \cite{???-clyneskline-intoread}, as a descriptor for the alteration of human beings to
+cope with the conditions of outer space: they would be self-regulating
+\emph{cybernetic organisms}\cite[p. 66]{ekbia}. While the creation of
+such cyborg astronauts was never attempted outside of the imagination
+of science fiction writers, astronauts were indeed fashioned into
+cyborgs by their existence within suits and spacecraft with which they
+had to interface for their survival, and the cyborg idea has become a
+powerful cultural force.\footnote{As Donna Haraway, one of the most recognized
+philosophers of cyborg culture (and cyborg feminism), describes:
+``Contemporary science 
+fiction is full of cyborgs---creatures simultaneously
+animal and machine, who populate worlds ambiguously natural and
+crafted''\cite[p. 117]{???-haraway}.} Meanwhile, cyborg technologies
+abound in real life, from the extreme to the mundane: implants to
+achieve increased sensory range and experience, or to trigger orgasm
+\cite[p. 64]{ekbia}; implants to monitor vital signs; telerobotic
+arms; bots and chatbots; implants to provide neural control of
+vehicles\cite[p. 65]{ekbia}. 
+
+%% ``Modern medicine is also full of
+%% cyborgs, of couplings between organism
+%% and machine''\cite[p. 117]{???-haraway}. Meanwhile, the cyborg has
+%% infiltrated our methods of production and destruction: ``Modern
+%% production seems like a dream of cyborg colonization work, a dream
+%% that makes the nightmare of Taylorism seem idyllic. And modern war is
+%% a cyborg orgy, coded by C3I,
+%% command-control-communication-intelligence, an \$84 billion item in 1984's US
+%% defence budget''\cite[p. 118]{???-haraway}. 
+%% Haraway's view is not altogether pessimistic, as she sees in the cyborg
+%% the potential site of a new epistemology that does not recognize or
+%% repeat Western binaries and cultural subjugation\cite[p.
+%%   118-121]{???-haraway}. But while one can hardly mention cyborgs without
+%% mentioning Haraway, hers is not the vision I find most relevant for
+%% understanding automated vehicles. Instead, I would like to consider
+
+But, more fundamentally, philosopher Andy
+Clark contends that humans are ``(disguised) \emph{natural-born}
+cyborgs''\cite[p. 66]{ekbia}. This idea is particularly compelling
+because it need make no distinction between the analog and the
+digital, the material and the virtual. It is not an artifact of the
+present moment, but a fundamental component of human experience. To
+Clark, our ``ability to enter into deep and complex relationships with
+nonbiological constructs, props, and aids'' is what best explains our
+distinctive intelligence\cite[p. 66-67]{ekbia}. This therefore holds
+not just for cars, or information and computer technologies, but for
+all kinds of technology. Our existence as a technological species is
+not new, and human technological augmentation goes back into
+prehistory. Our engagement with technological tools and
+artifacts---whether the tool is a smartphone, a loom, a wheel, or
+fire---is what makes us, fundamentally, cyborg beings.\footnote{Though Haraway holds that ``By the late 20th
+century, our time, a mythic time, we are all chimeras,
+theorized, and fabricated hybrids of machine and organism; in short,
+we are cyborgs''\cite[p. 118]{???-haraway}, I stand with Clark that we
+have long been so. It is only recently however, in part due to the pressure
+that AI places on human-machine dualisms, that this state of being has
+come to be recognized.}
+
+This concept is particularly powerful and valuable because it
+challenges hundreds of years of assumptions about human beings and
+human achievement---even some that are deeply ingrained in the human
+factors engineering work I lean on in chapter \ref{chap:3}. We are
+possessed by the idea that our technologies change, but that the human
+being remains fundamentally the same.\footnote{As Richard Horner put
+  it to the test pilots assembled at the SETP banquet in 1957: ``the
+  one link in the manned system which we have that improves the least
+  in successive generations, is the man himself''\cite[p.
+    19]{???-mindell}.} However, this assumption rests on a long held 
+dichotomy of human and machine, and the idea that the object of
+interest is the purely biological human. If prosthetics and artificial
+organs teach us anything, however, it should be that these boundaries
+are by no means clear. AI is however heir to a world of such sharp
+boundaries: mind and body, subject
+and object, nature and culture, science and politics\cite[p.
+  327]{ekbia}. Science, engineering, and broader culture ``embody'' and
+``regenerate'' these divisions\cite[p. 327]{ekbia}, but they are
+fundamentally only true or useful analytical frameworks, so we must
+ask whether they continue to serve us well, or whether they should,
+despite their attractive simplicity, be retired.\footnotemark Cognitive
+anthropology starts to break down these 
+divides, with the inspection of a human-machine cognitive system as a
+whole, but there is more to be done. Ekbia asks, what happens if we
+abandon the outmoded question of whether machines can reach our level
+of intelligence or capability, and instead ask how  ``humans and machines
+[are] mutually constituted through discursive practices?'' \cite[p.
+  328]{ekbia}. 
+
+\footnotetext{Ekbia, considering the source of ideologies of AI, sees its roots in
+the teachings of Democritus---carried forward by Hobbes
+and Descartes---and the separation of the atomist world and our
+representations of it.\cite[p. ???]{ekbia} These dualisms are deeply engrained in our
+thought patterns, but fail us when thinking about advanced
+technologies and their impacts because they favor unrealistic---and
+indeed, unreal---totalisms: all human or all machine, fully manual driving or fully
+autonomous driving.}
+
+The problem facing AI, according to Lucy Suchman\footnote{Note this is cited in
+  \cite[p. 331-332]{ekbia}.}, ``is less that we attribute agency to
+computational artifacts than that our language for talking about
+agency, whether for persons or artifacts, presupposes a field of
+discrete, self-standing entities''\cite[p.
+  263]{???-suchman-humanmachinereconfigurations-plansandsituatedactions-2e}.
+Instead, we should be asking how does intelligent behavior emerge in
+the interactions of 
+humans and machines, refusing to fix \emph{a priori} the category of
+the human. Automated vehicles are a product of AI, and are vulnerable
+to the same critique. 
+
+New epistemologies, involving perhaps a broader recognition of our
+cyborg nature,  may be
+necessary at multiple levels. At the level of the individual, what is
+the role or status of the human, and that of the machine? How do we
+classify, and make sense of, users and devices, and their
+relationships of supervision and co-operation? At the level of the
+system, what new understandings of the role and purpose of the road
+itself are needed if we want to make use of automated technologies to
+make cities more humane? At the legal level, what is the status of a
+vehicle acting autonomously on a certain time scale? And how can
+responsibility be apportioned between supervisors and the
+supervised?\footnote{It is important to note that ``responsibility''
+  is not binary, nor 
+should it be an all-or-nothing prospect. Legal scholars note that
+torts may already be distributed across human and nonhuman actors
+(operator, owner, seller, manufacturer, distributors) in legal
+rulings, but distribution of torts has an ethical
+and ideological stance\cite{???-suemycar,etc}. The distribution of
+torts to different actors in the system may vary from situation to
+situation, given the capacities of 
+the vehicle and the driver\cite{???-disableddriverexample}. However,
+the current liability framework does have problems, including the
+potential to scapegoat the human being, and the expense and difficulty
+of pursuing litigation.}
+The question of what we can actually ask the human to do, and hold them to task
+for, is a critical question both for automation system design and the
+legal handling of cases involving such automation.
+%% Sidenote: important to note that issues of litigation for full autonomy are
+%% not even part of the debate yet, we just aren't at the stage where it
+%% is worth discussing
+
+%% There are, however, problems with the using
+%%   the current liability framework to deal with blame and
+%%   responsibility in highly-automated systems. It is expensive for the
+%% litigant to get expert witnesses to testify as to the apportionment of
+%% responsibility between human and machine, and the human tends to be
+%% scapegoated all too often in industrial accidents involving human
+%% supervisors interacting with automation.
+
+And questions of the appropriate role of the human being involve not
+only the supervisor, within the vehicle or in a remote data center,
+but other users in the environment. If streets must be re-made in
+order to make certain technological configurations viable, is that
+re-making something the public is willing to accept? And who will
+benefit from it? As Dieter Zetsche, chairman of Daimler AG describes,
+``anyone who focuses solely on the technology has not yet grasped how 
+autonomous driving will change our
+society''\cite{???-http://www.slashgear.com/how-mercedes-f-015-self-driving-car-is-shaping-smart-cities-20374602/}.
+But as we have found in the past, changes that favor the users or
+manufacturers of automated vehicles may not favor other users of city
+spaces, who may find their freedoms foreclosed upon. The history of
+the re-making of the city and street is part of why I hold that
+vehicle automation is not an 
+independent factor to be maximized, but a variable that is firmly
+intertwined with the design of the whole transport system.
+As I have described, these vehicles sit in a much broader network of
+social relationships: the city and the street have changed before, and
+will change again, to accomodate new technologies, assuming sufficient
+social and economic pressure to catalyze that change.\footnote{Technologies do
+not alone bring about those changes, but their presence, availability,
+and market viability provide incentives for groups to encourage broad
+social and infrastructural changes.} The automated vehicle represents
+another possible nexus for change, but how the city will be re-shaped
+is an open question. 
+
 
 \section{The Shape of Automation}
 
@@ -40,6 +415,10 @@ facing not a system of autonomous robots but fleets of telerobotic
 vehicles with closed-loop control systems providing limited autonomy,
 that are supervised by remote operators within the datacenters of
 multinational IT corporations. 
+
+%%TODO: 
+%%http://www.forbes.com/sites/freddiedawson/2015/03/31/how-far-away-is-driverless-technology-really/
+%%Kabbee gets the supervised idea!
 
 But even this, though it presents certain advantages, is by no means
 our obvious future. Such a networked system worsens issues of privacy
@@ -179,6 +558,21 @@ or the overall cost of those
 vehicles, without providing a new revenue stream to compensate,
 represents a deeply suspect investment. 
 
+Problematically, the automated car---like the
+``smart city'' which has already been critiqued in this
+way\cite{???}---presents the opportunity for successful technology
+companies to wrest greater control over everyday life, to worm their
+way more deeply into our existence and thereby make themselves
+indispensable. Automation can be a tool to enable one group of
+people---technologists running multinational organizations---at the
+expense of the rest of us.
+But it also does not have to be employed toward those ideological
+ends; given sufficient willpower, it can be made to serve others.
+As I held in chapter \ref{chap:2}, changes to the city
+should not be arbitrary, at the whims of a certain set of
+producers and organizations, but part of a large-scale system design
+strategy to address the needs of all transportation users.
+
 %% The pro-side: millions of deaths if we don't do something now, so we
 %% have to accept these
 %% The con-side: (regulator) current deaths not on my hands, but if one
@@ -277,7 +671,14 @@ First, what are the social goals around which automated technology
 should be designed and implemented? The relative importance of safety,
 convenience, mobility, social equality, and other factors must be
 matters of public debate, as they are absolutely central to the
-project of automation.
+project of automation.\footnote{To the list
+of major questions facing us as a result of this technology, given the
+interest in full-system design, we might
+wish to
+add: how do we make transportation technology and urban planning sensitive to social
+justice and responsive to a broad base of citizens, and inoculate it
+against takeover by corporate entities that have only their own best interests
+in mind? But this question is larger than the autonomous vehicle arena.}
 
 Second, for any particular design, what are the appropriate roles of
 human and machine in the human-machine system that automated vehicles
@@ -356,5 +757,7 @@ narrative of automation toward something more productive, which takes
 seriously the technological hybridity of our past, present and future.
 And it paves the way for a political critique that asks, knowing
 that humans remain involved, who they are, where they are, and how
-the system is being designed to serve their needs or impede their agency.
+the system is being designed to serve their needs or impede their
+agency.
+
 
