appendices excised from toc

--- a/main.tex
+++ b/main.tex
@@ -56,9 +56,9 @@ process all files:}
 \include{chap2}
 \include{chap3}
 \include{concl}
-\appendix
-\include{chap4}
-\include{chap5}
+%\appendix
+%\include{chap4}
+%\include{chap5}
 %\include{appa}
 %\include{appb}
 \include{biblio}
